# miden-note-transport

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  deny.toml
.github/workflows/: dependency-audit.yml  web-client-test.yml
crates/client/: Cargo.toml  README.md
crates/client/src/: error.rs  grpc.rs  lib.rs  types.rs
crates/client/src/database/: mod.rs  sqlite.rs
crates/client/tests/: common.rs  test_transport_basic.rs  test_transport_client_state.rs  test_transport_streaming.rs
crates/node/: Cargo.toml  README.md  build.rs  diesel.toml
crates/node/src/: error.rs  lib.rs  logging.rs  metrics.rs  test_utils.rs  types.rs
crates/node/src/database/: error.rs  maintenance.rs  mod.rs  sqlite.rs
crates/node/src/database/sqlite/: connection_manager.rs  migrations.rs  mod.rs  models.rs  schema.rs
crates/node/src/database/sqlite/migrations/20250101000000_initial_setup/: up.sql
crates/node/src/node/: grpc.rs  mod.rs  streaming.rs
crates/node/src/node/grpc/: mod.rs  streaming.rs
crates/proto/: Cargo.toml  README.md  build.rs  miden-private-transport.proto  transport.proto
crates/proto/src/: lib.rs
crates/proto/src/generated_transport/: account.rs  miden_private_transport.rs
crates/rust-client/: Cargo.toml  README.md
crates/rust-client/src/: error.rs  grpc.rs  lib.rs  logging.rs  test_utils.rs  types.rs
crates/rust-client/src/database/: mod.rs  sqlite.rs
crates/rust-client/src/database/idxdb/: mod.rs
crates/rust-client/src/database/idxdb/js/: accounts.js  mgmt.js  notes.js  schema.js
crates/rust-client/src/database/idxdb/mgmt/: js_bindings.rs  mod.rs  models.rs
crates/rust-client/src/database/idxdb/note/: js_bindings.rs  mod.rs  models.rs  utils.rs
crates/rust-client/src/database/sqlite/: mod.rs  note.rs  schema.sql  stats.rs
crates/rust-client/src/database/sqlite/db_management/: errors.rs  pool_manager.rs  utils.rs
crates/rust-client/tests/: common.rs  test_transport_basic.rs  test_transport_client_state.rs  test_transport_streaming.rs
crates/transport/: Cargo.toml  README.md
crates/transport/src/: error.rs  lib.rs  logging.rs  types.rs
crates/transport/src/client/: crypto.rs  grpc.rs  mod.rs
crates/transport/src/client/crypto/: aes.rs  hybrid.rs  mod.rs
crates/transport/src/client/database/: mod.rs  sqlite.rs
crates/transport/src/database/: maintenance.rs  mod.rs  sqlite.rs
crates/transport/src/node/: grpc.rs  mod.rs
crates/transport/tests/: common.rs  test_transport_basic.rs  test_transport_client_state.rs
crates/web-client/: Cargo.toml  README.md  package-lock.json  package.json  playwright.config.ts  rollup.config.js
crates/web-client/.github/workflows/: test.yml
crates/web-client/app/: server.js  simple-app.html
crates/web-client/js/: index.js  wasm.js
crates/web-client/playwright-report/: index.html
crates/web-client/src/: lib.rs  utils.rs
crates/web-client/src/models/: account_id.rs  address.rs  mod.rs  note.rs  note_assets.rs  note_tag.rs
crates/web-client/test/: transport.test.ts
docs/: roadmap.md
proto/: Cargo.toml  README.md  build.rs
proto/proto/: miden_note_transport.proto
proto/src/: lib.rs
