[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Client"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["messaging", "miden"]
license.workspace      = true
name                   = "miden-private-transport-client"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# Proto
miden-private-transport-proto = { workspace = true }

# Miden
miden-lib     = "0.11.1"
miden-objects = { workspace = true }
miden-testing = "0.11.1"

# gRPC server and client
tokio        = { workspace = true }
tonic        = { workspace = true }
tonic-health = { workspace = true }
tower        = { features = ["timeout"], version = "0.5" }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Protobuf
prost-types = { workspace = true }

# Database
sqlx = { workspace = true }

# Logging
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }
futures     = { workspace = true }

# Time handling
chrono = { workspace = true }

# Generic
rand = { workspace = true }

[dev-dependencies]
miden-private-transport-node = { workspace = true }
serial_test                  = { workspace = true }
