[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Node"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["messaging", "miden"]
license.workspace      = true
name                   = "miden-private-transport-node"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[features]
testing = []

[dependencies]
# Proto crate
miden-private-transport-proto = { workspace = true }

# Miden
miden-objects = { features = ["testing"], workspace = true }

# gRPC server and client
tokio        = { workspace = true }
tonic        = { default-features = true, workspace = true }
tonic-health = { workspace = true }
tonic-web    = { workspace = true }
tower        = { workspace = true }
tower-http   = { features = ["cors"], workspace = true }

# Serialization
serde      = { workspace = true }
serde_json = { workspace = true }

# Protobuf
prost-types = { workspace = true }

# Database
deadpool          = { workspace = true }
deadpool-diesel   = { features = ["sqlite"], version = "0.6" }
deadpool-sync     = { version = "0.1" }
diesel            = { features = ["numeric", "sqlite"], version = "2.2" }
diesel_migrations = { features = ["sqlite"], version = "2.2" }

# Logging
opentelemetry         = { workspace = true }
opentelemetry-otlp    = { workspace = true }
opentelemetry_sdk     = { workspace = true }
tracing               = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber    = { workspace = true }

# Error handling
anyhow    = { workspace = true }
thiserror = { workspace = true }

# Async traits
async-trait = { workspace = true }

# Time handling
chrono = { workspace = true }

# General
rand = { workspace = true }

[dev-dependencies]
miden-private-transport-node = { features = ["testing"], workspace = true }
serial_test                  = { workspace = true }
