[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Protocol Buffers"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "proto"]
license.workspace      = true
name                   = "miden-private-transport-proto"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[dependencies]
# Protobuf
prost = "0.13"
prost-types = "0.13"
tonic.workspace = true

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Miden objects for conversions
miden-objects = { version = "0.10", features = ["testing"] }

[build-dependencies]
tonic-build = "0.13"
