[package]
authors.workspace      = true
description            = "Miden Private Notes Transport Protocol Buffers"
edition.workspace      = true
homepage.workspace     = true
keywords               = ["miden", "proto"]
license.workspace      = true
name                   = "miden-private-transport-proto"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[features]
default = ["transport"]
# If 'transport' disabled, this crate provides only a transport-free client
transport = ["tonic/transport"]

[dependencies]
prost       = { default-features = false, version = "0.13" }
prost-types = { workspace = true }
tonic       = { features = ["codegen", "prost"], workspace = true }

[build-dependencies]
tonic-build = { version = "0.13" }
