[package]
name = "miden-transport"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "miden-transport-node"
path = "src/bin/node.rs"

[[bin]]
name = "miden-transport-cli"
path = "src/bin/cli.rs"

[dependencies]
# Proto crate
miden-transport-proto = { path = "../proto" }

# Miden
miden-crypto = "0.15"
miden-lib = "0.10"
miden-objects = { version = "0.10", features = ["testing"] }
miden-testing = "0.10"

# gRPC server and client
tokio = { version = "1.47", features = ["full"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tower = { version = "0.5", features = ["timeout"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Protobuf
prost-types = "0.13"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }

# Encryption
aes-gcm = "0.10"
rand = "0.9"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
#opentelemetry         = { version = "0.30" }
#opentelemetry-otlp    = { default-features = false, features = ["grpc-tonic", "tls-roots", "trace"], version = "0.30" }
#opentelemetry_sdk     = { features = ["rt-tokio", "testing"], version = "0.30" }
tracing = "0.1"
tracing-opentelemetry = { version = "0.31" }
tracing-subscriber = { features = ["env-filter", "fmt", "json"], version = "0.3" }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async traits
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# User identity
uuid = { version = "1.17.0", features = ["v4"] }

# Base64 encoding/decoding
base64 = "0.22"

[dev-dependencies]
serial_test = "3.2"
