[package]
authors.workspace      = true
categories             = ["no-std"]
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-private-transport-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
miden-private-transport-client = { features = ["idxdb", "web-tonic"], workspace = true }

# Miden dependencies
miden-client  = { default-features = false, version = "0.11.1" }
miden-lib     = { default-features = false, version = "0.11.1" }
miden-objects = { workspace = true }
miden-testing = { version = "0.11.1" }

# External dependencies
async-trait          = { workspace = true }
chrono               = { workspace = true }
rand                 = { workspace = true }
serde-wasm-bindgen   = { version = "0.6" }
wasm-bindgen         = { features = ["serde-serialize"], version = "0.2" }
web-sys              = { features = ["console"], version = "0.3" }
hex                  = "0.4"
serde_json           = "1.0"
wasm-bindgen-futures = { version = "0.4" }
js-sys                = "0.3"
winter-utils         = "0.8"

[dev-dependencies]
web-sys = { features = ["console"], version = "0.3" }
