[package]
authors.workspace      = true
categories             = ["no-std"]
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-private-transport-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["wasm-bindgen-futures"]

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
miden-private-transport-client = { features = ["idxdb", "web-tonic"], workspace = true }

# Miden dependencies
miden-client  = { workspace = true }
miden-lib     = { workspace = true }
miden-objects = { workspace = true }
miden-testing = { workspace = true }

# External dependencies
async-trait          = { workspace = true }
chrono               = { workspace = true }
hex                  = { workspace = true }
rand                 = { workspace = true }
serde_json           = { workspace = true }
wasm-bindgen         = { workspace = true, features = ["serde-serialize"], version = "0.2" }
wasm-bindgen-futures = { workspace = true, version = "0.4" }
web-sys              = { workspace = true, features = ["console"], version = "0.3" }
winter-utils         = "0.8"

# Web-specific dependencies
js-sys                = { workspace = true }
serde-wasm-bindgen   = { workspace = true }
