[package]
authors.workspace      = true
categories             = ["no-std"]
edition.workspace      = true
keywords               = ["client", "miden", "wasm", "web"]
license.workspace      = true
name                   = "miden-private-transport-client-web"
readme                 = "README.md"
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lints]
workspace = true

[package.metadata.cargo-machete]
ignored = ["js-sys"]

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
miden-private-transport-client = { features = ["idxdb", "web-tonic"], workspace = true }

# Miden dependencies
miden-client  = { workspace = true }
miden-lib     = { workspace = true }
miden-objects = { workspace = true }

# External dependencies
hex                  = { workspace = true }
rand                 = { workspace = true }
serde_json           = { workspace = true }
wasm-bindgen         = { features = ["serde-serialize"], workspace = true }
wasm-bindgen-futures = { workspace = true }

# Web-specific dependencies
js-sys = { workspace = true }
